--- a/.config
+++ b/.config
@@ -10,3 +10,4 @@ CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-theme-material=y
+# CONFIG_PACKAGE_dnsmasq is not set
