--- a/.config
+++ b/.config
@@ -7,6 +7,7 @@ CONFIG_PACKAGE_ddns-scripts-cloudflare=y
 CONFIG_PACKAGE_ddns-scripts-godaddy=y
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-theme-material=y
