--- a/.config
+++ b/.config
@@ -12,3 +12,4 @@ CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-theme-material=y
 # CONFIG_PACKAGE_dnsmasq is not set
+CONFIG_KERNEL_MIPS_FPU_EMULATOR=y
